# toy-compiler

./: .gitignore  CMakeLists.txt  CommandLineMain.cpp  README.md  makefile
compiler/: Analyser.cpp  CMakeLists.txt  Compiler.cpp  Scanner.cpp
compiler/asts/: ArrayDeclare.cpp  BaseExpr.cpp  BinaryOpNode.cpp  BlockNode.cpp  CMakeLists.txt  DeclareNode.cpp  DoubleExpr.cpp  ErrorExpr.cpp  Expression.cpp  FunctionAST.cpp  FunctionCallExpr.cpp  GlobalDeclareNode.cpp  IfExpr.cpp  IfStatement.cpp  IntegerExpr.cpp  PrototypeAST.cpp  ReturnStatement.cpp  UnaryExpr.cpp  VariableNode.cpp
compiler/asts/BinaryOpNode/: BinaryOpNode.cpp  BinaryOpStrategy.cpp
compiler/asts/CastNode/: CastNode.cpp  CastNodeStrategy.cpp
compiler/asts/DeclareStatement/: DeclareNode.cpp  DeclareNodeStrategy.cpp  DeclareStatement.cpp
compiler/parser/: CMakeLists.txt  ParseExpr.cpp  ParseFunction.cpp  ParseStatement.cpp  ParseTopLevel.cpp
compiler/types/: CMakeLists.txt  DoubleType.cpp  DoubleTypeInfo.cpp  MemoryType.cpp  SignedInt32.cpp  TypeInfo.cpp
compiler/util/: TokenToTypeInfo.cpp
include/: Analyser.h  CommandLineOptions.h  Compiler.h  EvalType.h  Parser.h  Token.h
include/asts/: ASTNode.h  ArrayDeclare.h  BaseExpr.h  BinaryOpNode.h  BinaryOpStrategy.h  BlockNode.h  CastNode.h  ConstExpr.h  DeclareNode.h  DeclareNodeStrategy.h  DeclareStatement.h  ErrorExpr.h  Expression.h  FunctionAST.h  FunctionCallExpr.h  GlobalDeclareNode.h  IfExpr.h  IfStatement.h  PrototypeAST.h  ReturnStatement.h  Statement.h  UnaryExpr.h  VariableNode.h
include/types/: DoubleType.h  DoubleTypeInfo.h  MemoryType.h  SignedInt32Type.h  TypeInfo.h
include/util/: TokenToTypeInfo.h
src/: Analyser.cpp  CommandLineParser.cpp  Compiler.cpp  Parser.cpp  Scanner.cpp  main.cpp  makefile
src/asts/: BaseAST.cpp  BinaryOpNode.cpp  BlockNode.cpp  DeclareNode.cpp  DeclearNode.cpp  DoubleExpr.cpp  ErrorExpr.cpp  FunctionAST.cpp  FunctionCallExpr.cpp  GlobalDeclareNode.cpp  GlobalDeclearNode.cpp  IfExpr.cpp  IntegerExpr.cpp  NumberNode.cpp  PrototypeAST.cpp  ReturnStatement.cpp  UnaryExpr.cpp  VariableNode.cpp  makefile
src/include/: Analyser.h  CommandLineOptions.h  CommandLineParser.h  Compiler.h  Parser.h  Scanner.h  Token.h
src/include/asts/: BaseAST.h  BaseExpr.h  BinaryOpNode.h  BlockNode.h  ConstExpr.h  DeclareNode.h  DeclearNode.h  ErrorExpr.h  FunctionAST.h  FunctionCallExpr.h  GlobalDeclareNode.h  GlobalDeclearNode.h  IfExpr.h  NumberNode.h  PrototypeAST.h  ReturnStatement.h  UnaryExpr.h  VariableNode.h
src/parser/: ParseExpr.cpp  ParseFunction.cpp  ParseStatement.cpp  ParseTopLevel.cpp
